# Audio-Editor

./: CMakeLists.txt  README.md
Audio/Audio/x64/Debug/: Audio.exe.recipe  Audio.ilk  Utils.h.ifc  Utils.h.ifc.d.json  Utils.h_F6338920F5545CFF.ifc.dt.module.json  Utils.h_F6338920F5545CFF.ifc.dt.module.json.command  utils.h.module.json  vc143.idb
Audio/Audio/x64/Debug/Audio.tlog/: Audio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Audio/Audio/x64/Debug/Audio_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
AudioLib/: CMakeLists.txt
AudioLib/include/: AudioMemory.h  AudioModificator.h  RTMidiManager.h  Utils.h  WaveFile.h  XAudioManager.h
AudioLib/src/: AudioMemory.cpp  AudioModificator.cpp  RTMidiManager.cpp  WaveFile.cpp  XAudioManager.cpp
Interface/: CMakeLists.txt
Interface/include/: Display.h
Interface/src/: Display.cpp
app/: CMakeLists.txt
app/src/: main.cpp
